# cmrx

./: .clang-tidy  .gitignore  .gitmodules  CLANG_TIDY.md  CMakeLists.txt  Doxyfile  HIL_TESTING.md  LICENSE  README.md  README.smp.txt  UNIT_TESTING.md  access_8h_source.html  algo_8h_source.html  annotated.html  annotated_dup.js  api_8h_source.html  application_8h_source.html  arch_2arm_2cmsis_2arch_2corelocal_8h_source.html  arch_2arm_2cmsis_2arch_2mpu_8h_source.html  arch_2arm_2cmsis_2arch_2static_8h_source.html  arch_2arm_2cmsis_2arch_2syscall_8h_source.html  arch_2arm_2static_8h_source.html  arch_2context_8h_source.html  arch_2linux_2posix_2arch_2corelocal_8h_source.html  arch_2linux_2posix_2arch_2mpu_8h_source.html  arch_2linux_2posix_2arch_2syscall_8h_source.html  arch_2riscv_2hal_2arch_2corelocal_8h_source.html  arch_2riscv_2hal_2arch_2mpu_8h_source.html  arch_2riscv_2hal_2arch_2static_8h_source.html  arch_2riscv_2hal_2arch_2syscall_8h_source.html  arch_2sched_8h_source.html  arch_2testing_2arch_2corelocal_8h_source.html  arch_2testing_2arch_2mpu_8h_source.html  arch_2testing_2arch_2static_8h_source.html  arm_2cmsis_2arch_2corelocal_8h_source.html  arm_2cmsis_2arch_2cortex_8h_source.html  arm_2cmsis_2arch_2scb_8h_source.html  arm_2cmsis_2arch_2sysenter_8h_source.html  assert_8h_source.html  aux_2systick_8h_source.html  (+432 more)
quirks/: CMakeLists.txt  README.md
quirks/pico-sdk/: CMakeLists.txt  README.md  cmrx_isrs.c  crt0.S
quirks/pico-sdk-riscv/: CMakeLists.txt  README.md  cmrx_ecall_handler.c  cmrx_exception_dispatcher.c  cmrx_timer_isr.c  crt0_riscv_cmrx.S  riscv_rp2350_exception_frame.c  riscv_rp2350_exception_frame.h
src/: CMakeLists.txt
src/aux/: systick.c
src/extra/: CMakeLists.txt  cm_ipi.c  emulator.c  systick.c
src/extra/queue_server/: CMakeLists.txt  README.md  queue.c  queue_server.c
src/extra/queue_server/tests/: CMakeLists.txt  test_queue_server.c
src/lib/: CMakeLists.txt  irq.c  mutex.c  notify.c  rpc.c  signal.c  std.c  sysenter.c  thread.c  timer.c
src/lib/arch/arm/: CMakeLists.txt  arch.cmake  mutex.c
src/lib/arch/linux/: mutex.c
src/lib/arch/riscv/: arch.cmake  mutex.c
src/lib/arch/testing/: arch.cmake
src/os/: CMakeLists.txt  mpu.c  sched.c  syscall.c
src/os/api/: CMakeLists.txt  mutex.c  signal.c  thread.c
src/os/arch/arm/: CMakeLists.txt  cortex.c  mpu.c  nvic.c  pendsv.c  rpc.c  runtime.c  sanitize.c  sched.c  signal.c  signal.h  static.c  swo.h  syscall.c  trace.c
src/os/arch/arm/cmsis/arch/: application.h  assert.h  corelocal.h  cortex.h  memory.h  mpu.h  mpu_priv.h  nvic.h  runtime.h  scb.h  static.h  (+2 more)
src/os/arch/arm/generic/: CMakeLists.txt  platform.h
src/os/arch/arm/rp2xxx/: CMakeLists.txt  platform.h  rp2xxx.c
src/os/arch/linux/: CMakeLists.txt  clock.c  clock.h  interrupt.c  interrupt.h  linux.c  linux.h  posix.c  relay.c  relay.h  static.c  thread.c  thread.h  threads.c
src/os/arch/linux/c11/: threads.h
src/os/arch/riscv/: CMakeLists.txt  context_switch_core.c  context_switch_request.c  mpu.c  rpc.c  sched.c  static.c
src/os/arch/riscv/hal/: riscv_hal_backend.c  riscv_hal_backend_csr.c
src/os/arch/testing/: CMakeLists.txt  corelocal.c  mpu.c  pendsv.c  platform.h  rpc.c  sched.c  static.c  timing_provider.c
src/os/arch/testing/arch/: application.h  assert.h  corelocal.h  mpu.h  runtime.h  static.h  syscall.h  sysenter.h
src/os/kernel/: CMakeLists.txt  access.c  access.h  algo.c  algo.h  context.c  context.h  isr.c  mpu.c  mpu.h  mutex.c  mutex.h  notify.c  notify.h  pendsv.c  rpc.c  rpc.h  runtime.h  sanitize.c  sanitize.h  sched.c  sched.h  signal.c  signal.h  syscall.c  syscall.h  timer.c  timer.h  trace.c  trace.h  txn.c  txn.h
src/os/kernel/arch/: context.h  corelocal.h  mpu.h  runtime.h  sched.h  static.h
src/os/kernel/tests/: CMakeLists.txt  algo_binary_search.c  algo_bitmap.c  algo_data.c  algo_data.h  algo_hash_search.c  algo_insert_sort.c  background_checker.c  background_checker.h  os_get_next_thread.c  os_notify_futex.c  os_notify_wait_object.c  os_sched_timing_callback.c  os_sched_yield.c  os_setitimer.c  os_setpriority.c  os_shutdown.c  os_stack_alloc_dispose.c  os_start.c  os_thread_continue.c  os_thread_kill.c  os_thread_migrate.c  os_thread_stop.c  os_txn.c  os_usleep.c  riscv_hal_backend.c  riscv_hal_backend_fake_csr.c  rpc_stack_pop.c  rpc_stack_push.c  smp_atomic_ops.c  stubs.c  test_sched.c  test_traits.c  test_traits.h
src/os/shim/: CMakeLists.txt  clksource.c  scb.c  static.c
src/os/shim/cortex-m0plus/: CMakeLists.txt  systick.c
src/os/shim/cortex-m3/: systick.c
src/os/shim/cortex-m4/: systick.c
src/os/shim/cortex-m7/: CMakeLists.txt  systick.c
src/testing/: CMakeLists.txt  ctest_main.c  intrinsics.c  static.c
src/testsuite/: CMakeLists.txt  debug.c  debug.gdb  debug.h  main.c  openocd.cfg
src/testsuite/os_start/: CMakeLists.txt  debug.c  init.c  main.c
src/testsuite/process_data_access/: init.c
src/testsuite/rpc_call/: callee.c  caller.c  service.h
src/testsuite/rpc_shared_memory/: callee.c  caller.c
src/testsuite/sched_prio/: init.c
src/testsuite/sched_yield/: init.c
src/testsuite/syscall_usleep/: init.c
src/testsuite/thread_join/: init.c
testing/clang-tidy/: CMakeLists.txt  README.md
testing/clang-tidy/mock/: README.md
testing/clang-tidy/mock/cmsis/: cortex-m0+.ld  cortex-m23.ld
testing/clang-tidy/mock/cmsis/include/: cortex-m0+.h  cortex-m23.h  cortex-m3.h  cortex-m33.h  cortex.h
testsuite/: CMakeLists.txt  README.md  debug.c  debug.gdb  debug.h  gdb.sh  main.c  utils.h
testsuite/kill/: init.c
testsuite/os_start/: init.c
testsuite/process_data_access/: init.c
testsuite/rpc_call/: callee.c  caller.c  service.h
testsuite/rpc_return/: callee.c  caller.c
testsuite/rpc_shared_memory/: callee.c  caller.c  service.h
testsuite/sched_prio/: init.c
testsuite/sched_yield/: init.c
testsuite/setpriority/: init.c
testsuite/signal_kill/: init.c
testsuite/syscall_usleep/: init.c
testsuite/thread_create_high_prio/: init.c
testsuite/thread_create_low_prio/: init.c
testsuite/thread_exit/: init.c
testsuite/thread_join/: init.c
(+304 files in other folders)
