set(aux_systick_SRCS systick.c)
add_library(aux_systick STATIC EXCLUDE_FROM_ALL ${aux_systick_SRCS})
target_link_libraries(aux_systick cmsis_headers)
if (CMRX_STDLIB_USE_CMSIS_CORE)
    target_link_libraries(aux_systick cmsis_core)
endif()

set(aux_ipi_SRCS cm_ipi.c)
add_library(aux_ipi STATIC EXCLUDE_FROM_ALL ${aux_ipi_SRCS})
target_link_libraries(aux_ipi cmsis_headers)
if (CMRX_STDLIB_USE_CMSIS_CORE)
    target_link_libraries(aux_ipi cmsis_core)
endif()

add_subdirectory(queue_server)
