if (NOT UNIT_TESTING_BUILD)
    set(aux_systick_SRCS systick.c)
    add_library(aux_systick STATIC EXCLUDE_FROM_ALL ${aux_systick_SRCS})
    target_link_libraries(aux_systick cmsis_headers)
    if (CMRX_STDLIB_USE_CMSIS_CORE)
        target_link_libraries(aux_systick cmsis_core)
    endif()
    target_compile_options(aux_systick PRIVATE -mgeneral-regs-only)

    set(aux_ipi_SRCS cm_ipi.c)
    add_library(aux_ipi STATIC EXCLUDE_FROM_ALL ${aux_ipi_SRCS})
    target_link_libraries(aux_ipi cmsis_headers)
    if (CMRX_STDLIB_USE_CMSIS_CORE)
        target_link_libraries(aux_ipi cmsis_core)
    endif()

    set(phy_emu_SRCS emulator.c)
    add_library(phy_emu STATIC EXCLUDE_FROM_ALL ${phy_emu_SRCS})
    target_link_libraries(phy_emu PUBLIC stdlib)
endif()

add_subdirectory(queue_server)
